finished results for software testing, added appendix

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -455,6 +455,14 @@
   note         = {Accessed: 2024-09-17},
 }
 
+@misc{complexSamplingPython,
+  author = {Deepwave Digital},
+  title = {Recording Signals Tutorial},
+  howpublished = {\url{https://docs.deepwavedigital.com/Tutorials/2_recording_signals/}},
+  year = {2023},
+  note = {Accessed: 2024-09-20}
+}
+
 
 
 
