--- a/eecs-thesis-template-main/thesis/sections/02_rear_matter/00_appendix.tex
+++ b/eecs-thesis-template-main/thesis/sections/02_rear_matter/00_appendix.tex
@@ -1,12 +1,107 @@
 \begin{appendices}
 \cleardoublepage
 
-\chapter{Example Appendix Item}
-\todo[inline]{Appendix: Appendices are useful for supplying necessary details or explanations
-which do not seem to fit into the main text, perhaps because they are
-too long and would distract the reader from the central argument.
-Appendices are also used for program listings.}
-\lipsum[50-52]
+\chapter{System Intialization and Testing}
 
+The below sections detail the initial setup and testing of the Raspberry Pi 5 and different SDR hardware modules.
+
+\section{Python Code for LimeSDR Signal Capture \label{app:limeSDRscript}}
+\begin{lstlisting}[language=Python, caption={Python code for capturing DAB signal using LimeSDR}, label={lst:limeSDR_code}]
+import numpy as np
+import os
+import scipy
+from matplotlib import pyplot as plt
+import SoapySDR
+from SoapySDR import SOAPY_SDR_RX, SOAPY_SDR_CS16
+
+########################################################################################
+# Settings
+########################################################################################
+# Data transfer settings
+rx_chan = 0               # RX1 = 0, RX2 = 1 - Using the RX1 Wideband
+N = 2048000                  # Number of complex samples per transfer
+fs = 2.048e6               # Radio sample Rate
+freq = 202.928e6               # LO tuning frequency in Hz - DAB 9A
+use_agc = True           # Use or don't use the AGC
+timeout_us = int(5e6)
+
+# Recording Settings
+cplx_samples_per_file = 2048000  # Complex samples per file
+nfiles = 1              # Number of files to record
+rec_dir = '/Users/flynnmkelly/Desktop/Thesis/PassiveRadarThesis/LimeSDR'  # Location of drive for recording
+file_prefix = 'TestFile'   # File prefix for each file
+
+########################################################################################
+# Receive Signal
+########################################################################################
+# File calculations and checks
+cplx_samples_per_file = N   # Use entire buffer size for one file
+real_samples_per_file = 2 * cplx_samples_per_file
+
+# Initialize the LimeSDR receiver
+sdr = SoapySDR.Device(dict(driver="lime"))
+print(sdr.listSensors())  # Print sensor information
+
+sdr.setSampleRate(SOAPY_SDR_RX, 0, fs)          # Set sample rate
+sdr.setGainMode(SOAPY_SDR_RX, 0, use_agc)       # Set gain mode
+sdr.setFrequency(SOAPY_SDR_RX, 0, freq)         # Tune to DAB frequency
+
+print('Configuration complete')
+
+# Create data buffer and start streaming
+rx_buff = np.empty(2 * N, np.int16)  # Buffer for data
+rx_stream = sdr.setupStream(SOAPY_SDR_RX, SOAPY_SDR_CS16, [rx_chan]) # Setup data stream
+sdr.activateStream(rx_stream)  # Start streaming
+
+# Record the data
+sr = sdr.readStream(rx_stream, [rx_buff], N, timeoutUs=timeout_us)
+rc = sr.ret
+assert rc == N, 'Error Reading Samples from Device (error code = %d)!' % rc
+
+# Save data to file
+file_name = os.path.join(rec_dir, '{}.bin'.format(file_prefix))
+rx_buff.tofile(file_name)
+
+# Stop streaming and close connection
+sdr.deactivateStream(rx_stream)
+sdr.closeStream(rx_stream)
+\end{lstlisting}
+
+% ------------------------------
+
+\section{Code to Plot PSD for Testing LimeSDR}
+
+\begin{lstlisting}[language=Python, caption={Main Code to Read Data and Plot PSD}, label={lst:main_code}]
+# Main Code to Read Data and Plot PSD
+file_name = 'TestFile.bin'  # Specify your file name here
+fs = 2.048e6  # Sampling frequency
+center_freq = 202.928e6  # Center frequency
+
+# Read complex data from the file
+complex_data = read_complex_int16(file_name)
+
+# Compute the power spectral density
+f, Pxx = welch(complex_data, fs, nperseg=2048)
+
+# Shift the frequency axis
+f_shifted = f + center_freq
+
+# Plot PSD
+plt.figure(figsize=(12, 6))
+plt.semilogy(f_shifted, Pxx)
+plt.title('Power Spectral Density of the DAB Signal')
+plt.xlabel('Frequency (Hz)')
+plt.ylabel('Power/Frequency (dB/Hz)')
+plt.grid(True)
+
+# Set x-axis limits to show the full spectrum around the center frequency
+plt.xlim(center_freq - fs/2, center_freq + fs/2)
+
+# Format x-axis ticks to show MHz instead of Hz
+plt.gca().xaxis.set_major_formatter(plt.FuncFormatter(lambda x, p: f"{x/1e6:.3f}"))
+plt.xlabel('Frequency (MHz)')
+
+plt.show()
+\end{lstlisting}
 
 \end{appendices}
